Fonctionne avec DS1307, WS2812B. Traduit en français Version QlockTwo en français sauf minuit et midi RemoteDebug en cours. OTA à faire

--- a/esp8266/platformio.ini
+++ b/esp8266/platformio.ini
@@ -6,22 +6,30 @@
 ;   Advanced options: extra scripting
 ;
 ; Please visit documentation for the other options and examples
-; http://docs.platformio.org/page/projectconf.html
+; https://docs.platformio.org/page/projectconf.html
 
 [env:d1_mini]
 platform = espressif8266
 board = d1_mini
+
+board_build.ldscript = eagle.flash.4m2m.ld
+board_build.filesystem = littlefs
+
 framework = arduino
 
-lib_deps =
-  NeoPixelBus
-  WifiManager
-  #rtc libary by ID:
-  274
-  AceButton
-  ArduinoJson
-  # dependency for Timezone
-  Time
-  Timezone
+lib_deps = 
+	NeoPixelBus
+	WifiManager
+	274
+	ArduinoJson
+	Time
+	Timezone
+	Hash
+	joaolopesf/RemoteDebug@2.1.2
+	; ayushsharma82/ElegantOTA@^2.2.9
+	
+upload_port = COM13
+upload_speed = 115200
 
-upload_port = /dev/cu.wchusbserial1410
+monitor_port  = COM13
+monitor_speed = 115200
