--- a/esp8266/platformio.ini
+++ b/esp8266/platformio.ini
@@ -23,6 +23,7 @@ lib_deps =
 	Timezone
 	Hash
 	joaolopesf/RemoteDebug@2.1.2
+	ayushsharma82/ElegantOTA@^2.2.9
 upload_port = COM13
 upload_speed = 115200
 monitor_port = COM13
