--- a/esp8266/platformio.ini
+++ b/esp8266/platformio.ini
@@ -14,17 +14,18 @@ board = d1_mini
 board_build.ldscript = eagle.flash.4m2m.ld
 board_build.filesystem = littlefs
 framework = arduino
+lib_compat_mode = strict
 lib_deps = 
-	NeoPixelBus
-	WifiManager
 	274
-	ArduinoJson
-	Time
-	Timezone
 	Hash
-	joaolopesf/RemoteDebug@2.1.2
-	ayushsharma82/ElegantOTA@^2.2.9
-upload_port = COM13
-upload_speed = 115200
-monitor_port = COM13
+	ayushsharma82/ElegantOTA@^3.1.6
+	bblanchon/ArduinoJson@^7.2.1
+	tzapu/WiFiManager@^2.0.17
+	makuna/NeoPixelBus@^2.8.3
+	jchristensen/Timezone@^1.2.4
+	paulstoffregen/Time@^1.6.1
+	arduino-libraries/Arduino_APDS9960@^1.0.4
+upload_port = COM[34]
+upload_speed = 230400
+monitor_port = COM[34]
 monitor_speed = 115200
