création library.json pour Timezone

--- a/esp8266/platformio.ini
+++ b/esp8266/platformio.ini
@@ -14,6 +14,7 @@ board = d1_mini
 board_build.ldscript = eagle.flash.4m2m.ld
 board_build.filesystem = littlefs
 framework = arduino
+lib_ldf_mode = chain+
 lib_compat_mode = strict
 lib_deps = 
 	274
@@ -22,9 +23,9 @@ lib_deps =
 	bblanchon/ArduinoJson@^7.2.1
 	tzapu/WiFiManager@^2.0.17
 	makuna/NeoPixelBus@^2.8.3
-	jchristensen/Timezone@^1.2.4
 	paulstoffregen/Time@^1.6.1
 	arduino-libraries/Arduino_APDS9960@^1.0.4
+	jchristensen/Timezone@^1.2.4
 upload_port = COM[34]
 upload_speed = 230400
 monitor_port = COM[34]
